[package]
name = "icctl"
version = "0.1.0"
edition = "2021"
authors = [ "claudio carraro <carraro.claudio@gmail.com>" ]

repository = "https://github.com/in3hkf/icctl"

description = "Icom radio control using CI-V protocol"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
